# timeseries-expand

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  autofix.bat  ci_fix.bat  pyproject.toml  release.bat  replace_placeholders.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  (+195 more)
.mypy_cache/3.10/IPython/: __init__.data.json  __init__.meta.json  display.meta.json  paths.meta.json
.mypy_cache/3.10/PIL/: ExifTags.meta.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageCms.data.json  ImageCms.meta.json  ImageColor.meta.json  ImageFile.data.json  ImageFile.meta.json  ImageFilter.data.json  ImageFilter.meta.json  ImageMode.data.json  ImageMode.meta.json  ImageOps.meta.json  ImagePalette.meta.json  ImageQt.meta.json  ImageShow.data.json  (+19 more)
.mypy_cache/3.9/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  (+180 more)
examples/: annual_index.csv  coal_price_irregular.csv  coal_price_weekly.csv  monthly_index.csv  semi_monthly.csv
src/timeseries_expand/: __init__.py  cli.py  expander.py  frequencies.py
tests/: test_api.py  test_date_format.py  test_edge_cases.py  test_expander.py  test_frequencies.py  test_property.py  test_time_range.py
(+2954 files in other folders)
